Fixes z-index for input search lense by increasing index.

--- a/app/assets/stylesheets/components/form.scss
+++ b/app/assets/stylesheets/components/form.scss
@@ -3,6 +3,7 @@
     &.pre{
       @extend .form-control-feedback;
       color: $iron;
+      z-index: 3;
       right: auto;
       &+input{
         text-indent: 20px;  
